--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     margin: 0;
     font-family: 'PokemonFont', sans-serif;
+;
 }
 
 body {
@@ -15,6 +16,20 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #FFFFF0;
+}
+
+#pokemon-count {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    outline: 4px solid #3b4cca;
+    border-radius: 10px;
+    color: #ffde00;
+    background-color: white;
+    padding: 0 10px;
+    letter-spacing: 2px;
 }
 
 h1{
@@ -46,6 +61,12 @@ li {
     margin-bottom: 10px;
     text-shadow: 1px 1px 2px #000000;
     -webkit-text-stroke: 1px black;
+    transition: 0.3s;
+}
+
+li:hover {
+    scale: 1.05;
+    background-color: #3b4ccabb;
 }
 
 button {
@@ -67,7 +88,7 @@ button:active {
     transform: scale(0.95);
 }
 
-.hidden {
+hidden {
     opacity: 0;
     transform: translateY(0px); /* Start slightly below */
     transition: opacity 8s ease, transform 8s ease; /* Smooth transition */
