--- a/style.css
+++ b/style.css
@@ -17,12 +17,26 @@ body {
     flex-direction: column;
 }
 
+#pokemon-count {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    background-color: #3b4cca;
+    color: #ffde00;
+    letter-spacing: 2px;
+    outline: 1px solid black;
+    border-radius: 10px;
+    padding: 0 20px;
+    z-index: 1000;
+}
+
 h1{
     color: #ffde00;
     -webkit-text-stroke: 2px #3b4cca;
     text-shadow: 2px 2px 4px #000000;
     font-size: 7em;
     letter-spacing: 6px;
+    user-select: none;
 }
 
 #pokemon-list {
@@ -32,6 +46,10 @@ h1{
     width: 90%;
     margin: 20px;
     align-items: stretch;
+}
+
+a:visited {
+    text-decoration: none;
 }
 
 li {
@@ -51,8 +69,16 @@ li {
     animation : appear  ease-in-out;
     animation-timeline: view();
     animation-range: entry 0 cover 10%;
+    transition: 0.3s;
     letter-spacing: 3px;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+li:hover {
+    transform: scale(1.05);
 }
 
 button {
