--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
     background-image: url('./forest.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -51,11 +52,11 @@ h1{
     margin-top: 40px;
 }
 
-.types {
+.types {   /* for pokemon types */
     margin: 10px;
 }
 
-span {
+span { /* pokemon ID */
     border-radius: 10px;
     padding: 3px 10px;
     margin: 2px;
@@ -65,7 +66,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 25px;
-    width: 90%;
+    width: 70%;
     margin: 20px;
     align-items: stretch;
 }
@@ -75,10 +76,12 @@ a:visited, a:link {
 }
 
 .id {
-    position: absolute;
+    /* position: absolute;
     top: 5px;
-    left: 15px;
+    left: 15px; */
     display: block;
+    font-weight: 700;
+    font-size: smaller;
 }
 
 h3 {
@@ -132,12 +135,30 @@ button:active {
     transform: scale(0.95);
 }
 
-
 @keyframes appear {
     from {
         scale: .5;
     }
     to {
         scale : 1;
+    }
+}
+
+@media (max-width: 560px) {
+
+    input {
+        font-size: 1em;
+    }
+
+    h1 {
+        font-size: 4em;
+    }
+
+    ul {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 25px;
+        width: 90%;
+        margin: 0px;
+        align-items: stretch;
     }
 }
