--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ li {
     cursor: pointer;
     user-select: none;
     font-size: 2em;
-    margin-bottom: 10px;
     text-shadow: 1px 1px 2px #000000;
     animation : appear  ease-in-out;
     animation-timeline: view();
@@ -112,6 +111,13 @@ li {
     align-items: center;
 }
 
+li img {
+    margin-top: auto;
+}
+
+li div {
+    margin-top: 10px;
+}
 li:hover {
     transform: scale(1.05);
 }
