--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'PokemonFont';
-    src: url('./Resources/PokeFont.ttf') format('truetype');
+    src: url('Resources/PokeFont.ttf') format('truetype');
 }
 
 
@@ -16,7 +16,7 @@ body {
     align-items: center;
     flex-direction: column;
 
-    background-image: url('./Resources/forest.jpg');
+    background-image: url('Resources/forest.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
